--- a/UR/ur_evaluation_forks_stars.ipynb
+++ b/UR/ur_evaluation_forks_stars.ipynb
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from pyspark import SparkContext, SQLContext\n",
-    "sc = pyspark.SparkContext('local[*]')\n",
+    "sc = pyspark.SparkContext()\n",
     "sqlc = SQLContext(sc)"
    ]
   },
