--- a/RECOMMEND/give_recommendations_forks_stars.ipynb
+++ b/RECOMMEND/give_recommendations_forks_stars.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "import pyspark\n",
     "from pyspark import SparkContext, SQLContext\n",
-    "sc = pyspark.SparkContext('local[*]')\n",
+    "sc = pyspark.SparkContext()\n",
     "sqlc = SQLContext(sc)"
    ]
   },
